--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,30 @@
-<!-- <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-    </div>
-</nav> -->
-
 <section id="game" (keyup)="playerActions($event)" tabindex="-1" class="basic-section min-size">
-
     <router-outlet></router-outlet>
 
     <!-- Modal -->
-    <!-- <div *ngIf="endGame" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" class="modal fade show" style="display: block;" aria-modal="true" role="dialog">
+    <div *ngIf="endGame" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" class="modal fade show" style="display: block" aria-modal="true" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Game Over</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                        {{ winner ? "You Win" : "Game Over" }}
+                    </h1>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div *ngIf="winner; then win; else lost"></div>
+                    <ng-template #win>
+                        <h3>Congratulations you have won!!!</h3>
+                    </ng-template>
+                    <ng-template #lost>
+                        <h3>Sorry you lost, try again.</h3>
+                    </ng-template>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Back to configurartion</button>
+                    <button (click)="backToConfiguration()" type="button" class="btn btn-primary">
+            Back to configurartion
+          </button>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 </section>
